fixed alignments

--- a/css/custom.css
+++ b/css/custom.css
@@ -230,7 +230,7 @@ header, section {
 }
 
 .team-card {
-  height: 100%;
+
 }
 
 .team-image {
@@ -243,6 +243,7 @@ header, section {
   background: black;
   border-bottom-right-radius: 3em;
   border-bottom-left-radius: 3em;
+  padding: 20px;
 }
 
 .team-name {
@@ -251,6 +252,7 @@ header, section {
 }
 
 .team-study {
+  margin-left: 3%;
 }
 
 .team-social {
@@ -577,6 +579,11 @@ p {
 .nexa2 {
   font-family: "Title";
 
+}
+
+.nexa3 {
+  font-family: "Title";
+  text-align: center;
 }
 
 .black {
